--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,10 @@ dependencies:
     sdk: flutter
   google_fonts: ^6.1.0
   path_provider: ^2.1.1
+  intl: 0.18.1
+  table_calendar: ^3.0.9
+  syncfusion_flutter_calendar: ^24.1.41
+  flutter_localization: ^0.2.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,7 +51,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
