--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   table_calendar: ^3.0.9
   syncfusion_flutter_calendar: ^24.1.41
   flutter_localization: ^0.2.0
+  font_awesome_flutter: ^10.6.0
 
 
   # The following adds the Cupertino Icons font to your application.
