--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   syncfusion_flutter_calendar: ^24.1.41
   flutter_localization: ^0.2.0
   font_awesome_flutter: ^10.6.0
+  emoji_picker_flutter: ^1.6.3
+  image_picker: ^1.0.7
+  flutter_screen_lock: ^9.0.2
+  local_auth: ^2.1.8
 
 
   # The following adds the Cupertino Icons font to your application.
