--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,12 +41,17 @@ dependencies:
   image_picker: ^1.0.7
   flutter_screen_lock: ^9.0.2
   local_auth: ^2.1.8
+  toast: ^0.3.0
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_inset_box_shadow: ^1.0.8
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  firebase_ui_auth: ^1.12.1
+  cloud_firestore: ^4.14.0
 
 dev_dependencies:
   flutter_test:
